--- a/src/app/components/registration-steps/registration-steps.component.html
+++ b/src/app/components/registration-steps/registration-steps.component.html
@@ -40,19 +40,18 @@
       <br />
       <br />
       <p class="registration-steps__subtitle">
-        {{ t().registrationSteps.subtitle }}
+        <strong>Descuento para clubes de running</strong>
       </p>
     </div>
     <div class="registration-steps__detail">
       <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel placeat
-        pariatur quibusdam dolores ad suscipit ea voluptate illum unde
-        accusantium impedit possimus ducimus quasi, distinctio aliquid veniam
-        assumenda incidunt tempora! Lorem ipsum dolor sit, amet consectetur
-        adipisicing elit. Vel placeat pariatur quibusdam dolores ad suscipit ea
-        voluptate illum unde accusantium impedit possimus ducimus quasi,
-        distinctio aliquid veniam assumenda incidunt tempora!
+        Los clubes que inscriban mínimo <strong>10 atletas</strong> reciben un
+        <strong>10% de descuento</strong> en la inscripción a
+        <strong>Corramos por un Sueño 2026</strong>. <br /><br />
+        Para acceder al beneficio, comunícate directamente al
+        <strong>WhatsApp oficial de la carrera</strong>.
       </p>
+
       <div class="socials">
         <a href="https://whatsapp.com" target="_blank">
           <img src="/icons/whatsapp-line.svg" alt="Whatsapp" />
