--- a/src/app/components/registration-steps/registration-steps.component.html
+++ b/src/app/components/registration-steps/registration-steps.component.html
@@ -30,7 +30,7 @@
               <span class="steps__stat">{{ d.detail }}</span>
             </div>
             <br />
-            <a href="#contact" class="btn btn--primary">
+            <a href="#contact" class="btn btn--tertiary-inverted">
               {{ t().hero.cta.primary }}
             </a>
           </div>
@@ -53,7 +53,7 @@
       </p>
 
       <div class="socials">
-        <a href="https://whatsapp.com" target="_blank">
+        <a href="https://whatsapp.com" target="_blank" aria-label="WhatsApp">
           <img src="/icons/whatsapp-line.svg" alt="Whatsapp" />
         </a>
       </div>
