--- a/src/app/components/categories/categories.component.scss
+++ b/src/app/components/categories/categories.component.scss
@@ -130,7 +130,7 @@
   &__card-title {
     font-size: 5rem;
     font-weight: 600;
-    color: $primary-500;
+    color: white;
     margin-bottom: $spacing-md;
     transition: color $transition-normal;
     margin-left: auto;
@@ -138,7 +138,7 @@
   }
 
   &__card-description {
-    color: $primary-500;
+    color: white;
     margin-bottom: $spacing-md;
     line-height: 1.6;
   }
@@ -146,9 +146,9 @@
   &__stats {
     display: flex;
     align-items: center;
-    font-weight: bolder;
+    font-weight: 900;
     font-size: 1rem;
-    color: $primary-500;
+    color: white;
   }
 
   &__stat {
@@ -187,21 +187,21 @@
     .categories__overlay {
       opacity: 1;
     }
-
-    .categories__card-title {
-      color: white;
-    }
   }
 
   &__card--3k {
-    background: $secondary-200;
+    background: $primary-500;
   }
 
   &__card--5k {
-    background: $accent-500;
+    background: $warning-500;
   }
 
   &__card--10k {
-    background: $warning-500;
+    background: $danger-500;
   }
+}
+
+.btn--tertiary {
+  @include btn-card;
 }
