more adjustments were added

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -13,6 +13,7 @@
     <app-categories></app-categories>
     <app-registration-steps></app-registration-steps>
     <app-what-includes></app-what-includes>
+    <app-partners />
 
     <!-- Contact Section -->
     <app-contact></app-contact>
