partners was improved

--- a/src/app/components/partners/partners.html
+++ b/src/app/components/partners/partners.html
@@ -12,44 +12,14 @@
     </div>
 
     <!-- APOYAN -->
-
     <h2 class="partners__title partners__title--spaced">Apoyan</h2>
 
-    <div class="partners__carousel-full">
-      <div class="partners__carousel">
-        <div class="partners__track">
-          <img src="/sponsors/electrolit.png" alt="Electrolit" />
-          <img src="/sponsors/xpedition.png" alt="Xpedition" />
-          <img src="/sponsors/Pergolero.png" alt="Pergolero" />
-          <img src="/sponsors/logo-mauricio.png" alt="Pergolero" />
-          <img src="/sponsors/Maxforce.png" alt="Pergolero" />
-
-          <!-- duplicados -->
-          <img src="/sponsors/electrolit.png" alt="Electrolit" />
-          <img src="/sponsors/xpedition.png" alt="Xpedition" />
-          <img src="/sponsors/Pergolero.png" alt="Pergolero" />
-          <img src="/sponsors/logo-mauricio.png" alt="Pergolero" />
-          <img src="/sponsors/Maxforce.png" alt="Pergolero" />
-
-          <img src="/sponsors/electrolit.png" alt="Electrolit" />
-          <img src="/sponsors/xpedition.png" alt="Xpedition" />
-          <img src="/sponsors/Pergolero.png" alt="Pergolero" />
-          <img src="/sponsors/logo-mauricio.png" alt="Pergolero" />
-          <img src="/sponsors/Maxforce.png" alt="Pergolero" />
-
-          <img src="/sponsors/electrolit.png" alt="Electrolit" />
-          <img src="/sponsors/xpedition.png" alt="Xpedition" />
-          <img src="/sponsors/Pergolero.png" alt="Pergolero" />
-          <img src="/sponsors/logo-mauricio.png" alt="Pergolero" />
-          <img src="/sponsors/Maxforce.png" alt="Pergolero" />
-
-          <img src="/sponsors/electrolit.png" alt="Electrolit" />
-          <img src="/sponsors/xpedition.png" alt="Xpedition" />
-          <img src="/sponsors/Pergolero.png" alt="Pergolero" />
-          <img src="/sponsors/logo-mauricio.png" alt="Pergolero" />
-          <img src="/sponsors/Maxforce.png" alt="Pergolero" />
-        </div>
-      </div>
+    <div class="partners__grid">
+      <img src="/sponsors/electrolit.png" alt="Electrolit" />
+      <img src="/sponsors/xpedition.png" alt="Xpedition" />
+      <img src="/sponsors/Pergolero.png" alt="Pergolero" />
+      <img src="/sponsors/logo-mauricio.png" alt="Mauricio" />
+      <img src="/sponsors/Maxforce.png" alt="MaxForce" />
     </div>
   </div>
 </section>
