--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -12,7 +12,7 @@
       </p>
     </div>
 
-    <div class="contact__grid">
+    <div class="contact__grid contact__grid--centered">
       <!-- Contact Form -->
       <div class="contact__form-wrapper">
         <div class="contact__form-container">
@@ -232,6 +232,12 @@
                   </option>
                 }
               </select>
+              
+              @if (form.category === '3 Km') {
+                <p class="contact__category-info">
+                  {{ t().registrations.form.petRegistrationInfo }}
+                </p>
+              }
             </div>
 
             <!-- T-shirt Size Field -->
@@ -313,7 +319,7 @@
               {{t().registrations.form.attachmentTitle}}
             </h3>
 
-            <div class="contact__field">
+            <div class="contact__field contact__full-width">
               <label class="contact__label">{{ t().registrations.form.attachmentLabel }}</label>
 
               <div class="contact__file-wrapper">
@@ -326,7 +332,12 @@
                   (change)="onFileSelected($event)"
                   class="contact__file-input"
                 >
-
+                <input 
+                  type="hidden" 
+                  name="filePresence" 
+                  [(ngModel)]="fileName" 
+                  required
+                >
                 <label for="attachment" class="contact__file-custom">
                   <span class="contact__file-button">{{ t().registrations.form.attachmentButton }}</span>
                   <span class="contact__file-name">
@@ -387,54 +398,6 @@
               </div>
             </div>
           }
-        </div>
-      </div>
-
-      <!-- Contact Info -->
-      <div class="contact__info">
-        <div class="contact__info-container">
-          <h3 class="contact__info-title">Contact Information</h3>
-          
-          <div class="contact__info-items">
-            <!-- Email -->
-            <div class="contact__info-item">
-              <div class="contact__info-icon">
-                <svg class="contact__info-svg" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 4.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
-                </svg>
-              </div>
-              <div class="contact__info-content">
-                <h4 class="contact__info-label">Email Address</h4>
-                <p class="contact__info-value">[your.email&#64;company.com]</p>
-              </div>
-            </div>
-
-            <!-- Support -->
-            <div class="contact__info-item">
-              <div class="contact__info-icon">
-                <svg class="contact__info-svg" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.364 5.636l-3.536 3.536m0 5.656l3.536 3.536M9.172 9.172L5.636 5.636m3.536 9.192L5.636 18.364M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-5 0a4 4 0 11-8 0 4 4 0 018 0z"></path>
-                </svg>
-              </div>
-              <div class="contact__info-content">
-                <h4 class="contact__info-label">Support</h4>
-                <p class="contact__info-value">24/7 Customer Support</p>
-              </div>
-            </div>
-
-            <!-- Response Time -->
-            <div class="contact__info-item">
-              <div class="contact__info-icon">
-                <svg class="contact__info-svg" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                </svg>
-              </div>
-              <div class="contact__info-content">
-                <h4 class="contact__info-label">Response Time</h4>
-                <p class="contact__info-value">Within 24 hours</p>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
