--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="footer__bottom">
     <span class="footer__credit">
-      Diseño y desarrollo por: <strong>Pergolero Agencia Visual</strong>
+      Diseño y desarrollo por: <img src="/sponsors/Pergolero-color.png" alt="Logo Corramos por un Sueño" class="footer__logo-img">
     </span>
     <span class="footer__copyright">
       © 2026 Corramos por un Sueño. Todos los derechos reservados.
