--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,9 +4,7 @@
       <!-- Logo -->
       <div class="header__logo">
         <a href="#home" class="header__logo-link">
-          <span class="header__logo-text">
-            {{ t().header.companyName }}
-          </span>
+          <img src="/logotipo.png" alt="Logo Corramos por un Sueño" class="header__logo-img">
         </a>
       </div>
 
@@ -31,13 +29,19 @@
 
       <!-- CTA Button -->
       <div class="header__socials">
-        <a href="https://whatsapp.com" target="_blank">
+        <a href="https://wa.me/+573128821575" target="_blank">
           <img src="/icons/whatsapp-line.svg" alt="Whatsapp" />
         </a>
-        <a href="https://facebook.com" target="_blank">
+        <a
+          href="https://www.facebook.com/profile.php?id=61572904043581"
+          target="_blank"
+        >
           <img src="/icons/facebook-line.svg" alt="Facebook" />
         </a>
-        <a href="https://instagram.com" target="_blank">
+        <a
+          href="https://www.instagram.com/corramos_por_un_sueno/"
+          target="_blank"
+        >
           <img src="/icons/instagram-line.svg" alt="Instagram" />
         </a>
       </div>
@@ -105,7 +109,7 @@
         >
 
         <div class="header__socials">
-          <a href="https://whatsapp.com" target="_blank">
+          <a href="https://wa.me/+573128821575" target="_blank">
             <img src="/icons/whatsapp-line.svg" alt="Whatsapp" />
           </a>
           <a
