--- a/src/app/components/registration-steps/registration-steps.component.html
+++ b/src/app/components/registration-steps/registration-steps.component.html
@@ -53,7 +53,7 @@
       </p>
 
       <div class="socials">
-        <a href="https://whatsapp.com" target="_blank" aria-label="WhatsApp">
+        <a href="https://wa.me/+573128821575" target="_blank">
           <img src="/icons/whatsapp-line.svg" alt="Whatsapp" />
         </a>
       </div>
