--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,10 +1,16 @@
 <footer class="footer">
   <div class="footer__bottom">
     <span class="footer__credit">
-      Diseño y desarrollo por: <img src="/sponsors/Pergolero-color.png" alt="Logo Corramos por un Sueño" class="footer__logo-img">
+      Diseño y desarrollo por:
+      <img
+        src="/sponsors/Pergolero-color.png"
+        alt="Logo Pergolero-color"
+        class="footer__logo-img"
+      />
     </span>
     <span class="footer__copyright">
-      © 2026 Corramos por un Sueño. Todos los derechos reservados.
+      <img src="/logotipo.png" style="width: 6rem; margin-right: 2rem" /> © 2026
+      Todos los derechos reservados.
     </span>
   </div>
 </footer>
