socials was fixed for mobile and tablet

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,11 @@
       <!-- Logo -->
       <div class="header__logo">
         <a href="#home" class="header__logo-link">
-          <img src="/logotipo.png" alt="Logo Corramos por un Sueño" class="header__logo-img">
+          <img
+            src="/logotipo.png"
+            alt="Logo Corramos por un Sueño"
+            class="header__logo-img"
+          />
         </a>
       </div>
 
@@ -107,24 +111,6 @@
           class="header__mobile-link"
           >{{ t().header.navigation.contact }}</a
         >
-
-        <div class="header__socials">
-          <a href="https://wa.me/+573128821575" target="_blank">
-            <img src="/icons/whatsapp-line.svg" alt="Whatsapp" />
-          </a>
-          <a
-            href="https://www.facebook.com/profile.php?id=61572904043581"
-            target="_blank"
-          >
-            <img src="/icons/facebook-line.svg" alt="Facebook" />
-          </a>
-          <a
-            href="https://www.instagram.com/corramos_por_un_sueno/"
-            target="_blank"
-          >
-            <img src="/icons/instagram-line.svg" alt="Instagram" />
-          </a>
-        </div>
       </div>
     </div>
   </nav>
