--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -91,8 +91,8 @@
   }
 
   &__logo-img {
-    height: 40px; 
-    width: auto;   // Mantiene la proporción
+    height: 40px;
+    width: auto; // Mantiene la proporción
     display: block;
     transition: transform 0.3s ease;
 
@@ -127,7 +127,7 @@
     align-items: center;
     gap: 2rem;
 
-    @include tablet {
+    @include desktop {
       display: flex;
     }
   }
@@ -188,7 +188,7 @@
 
   &__mobile-toggle {
     display: block;
-    @include tablet {
+    @include desktop {
       display: none;
     }
   }
@@ -216,7 +216,7 @@
     transition: all 0.3s ease;
     overflow: hidden;
 
-    @include tablet {
+    @include desktop {
       display: none;
     }
 
@@ -260,7 +260,8 @@
   }
 
   &__socials {
-    display: none;
+    display: flex;
+    flex-direction: row;
     gap: 1.2rem;
     align-items: center;
     background: $secondary-50;
